delete funktion added
